--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="./assets/sass/element-variable.scss">
+    <!-- <link rel="stylesheet" href="./assets/sass/element-variable.scss"> -->
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/echarts/4.2.0-rc.1/echarts.min.js"></script>
   </head>
